--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "react",
     "hooks",
     "utils",
-    "registry",
     "dev-tookit"
   ],
   "scripts": {
     "typecheck": "tsc --noEmit",
     "build:index": "tsx scripts/build-index.ts",
+    "newTool": "tsx scripts/new-tool.ts",
     "start": "serve . --cors"
   },
   "peerDependencies": {
     "react": ">=16.8.0"
   },
   "devDependencies": {
+    "@types/inquirer": "^9.0.9",
     "@types/node": "^22.19.3",
     "@types/react": "^18.2.0",
+    "inquirer": "9.0.0",
     "react": "^18.2.0",
     "serve": "^14.2.5",
     "tsx": "^4.21.0",
