feat(docs): add vitepress documentation setup with auto-generation
- Add VitePress configuration and documentation structure
- Implement script to auto-generate docs from source code JSDoc
- Update package.json with docs-related scripts
- Add .gitignore entries for VitePress artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,12 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+# VitePress
+docs/.vitepress/cache
+docs/.vitepress/dist
+
+# Generated Documentation
+docs/sidebar.json
+docs/hooks/
+docs/utils/
