--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "typecheck": "tsc --noEmit",
     "build:index": "tsx scripts/build-index.ts",
     "newTool": "tsx scripts/new-tool.ts",
-    "start": "serve . --cors"
+    "start": "serve . --cors",
+    "docs:generate": "tsx scripts/generate-docs.ts",
+    "docs:dev": "pnpm docs:generate && vitepress dev docs",
+    "docs:build": "pnpm docs:generate && vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "peerDependencies": {
     "react": ">=16.8.0"
@@ -28,6 +32,8 @@
     "react": "^18.2.0",
     "serve": "^14.2.5",
     "tsx": "^4.21.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vitepress": "^1.6.4",
+    "vue": "^3.5.26"
   }
 }
